Bug 48347 - FILEOPEN: CSV: can't open if content starts with ID;[PNE]
Summary: FILEOPEN: CSV: can't open if content starts with ID;[PNE]
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:3.6.0
Keywords:
Depends on:
Blocks: 39868
  Show dependency treegraph
 
Reported: 2012-04-05 10:36 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2012-04-05 10:51 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2012-04-05 10:36:44 UTC
https://issues.apache.org/ooo/show_bug.cgi?id=117508
Trying to open a file as CSV where content starts with ID;P or ID;N or ID;E fails as the filter detection overrides with SYLK format because of the (weak 4 characters) signature. Bug sample was ID;NAME
Comment 1 Not Assigned 2012-04-05 10:51:47 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0de1b33bf73f075cff12fbe288129b2afff8216d

resolved fdo#48347 do not override preselected CSV with SYLK detection