resolved fdo#48347 do not override preselected CSV with SYLK detection